# www_haskell-ita_it_website

./: .gitignore  .gitlab-ci.yml  COPYRIGHT  README.md  README.org  Setup.hs  about.md  generate-nix-project.sh  index.html  rsync_to_web_server.sh  shell.nix  site.hs  stack.yaml  www-haskell-ita.cabal
css/: blog.css  grayscale.css  styles.css
drafts/: 2016-01-20-Applicative-Fold.lhs  2016-03-26-ReportMeeting  2017-12-03-resoconto-haskell-day-roma.md  organizzazione_meetup_inverno_2017.md  organizzazione_meetup_marzo_2016.md  organizzazione_meetup_novembre_2016.md
knowledge-base/: MEETUP-ORGANIZATION.md
old_web_site/: index.html
posts/coding/: 2015-10-23-hypothenuse.lhs  2015-10-30-Turtle-Raw.lhs  2015-11-30-Turtle-Raw.lhs  2016-01-20-high-level-haskel-code.lhs  2017-06-22-haskellism.md  2017-09-14-cabal-new-build.md  2020-10-10-video-introduttivi.md  Proposte_attivita_collaborative.md
posts/events/: 2015-07-04-resoconto_meetup_milano.md  2015-10-17-resoconto_meetup_bologna.md  2016-02-12-organizzazione-meetup-marzo-2016.md  2016-03-26-resoconto_meetup_firenze.md  2016-09-23-incontro-autunnale-2016.md  2016-11-04-haskell-day-bologna.md  2016-11-19-resoconto-meetup_bologna.md  2017-01-06-incontro-invernale-2017.md  2017-01-18-haskell-day-milano-2.md  2017-03-15-resoconto-milano-2.md  2017-10-18-haskell-day-roma.md  2017-12-03-resoconto-haskell-day-roma.md  2018-07-01-haskell-day-mini-incontro.md  2019-01-25-tapas-roma.md  2019-01-26-tapas-roma.md  (+3 more)
templates/: blog-list.html  blog.html  default.html  page.html  slides-list.html  slides.html
(+2 files in other folders)
