name:               www-haskell-ita
version:            0.1.0.0
stability:	    alpha
build-type:         Simple
cabal-version:      >= 1.10
license:            BSD2
author: 	    Massimo Zaniboni <massimo.zaniboni@docmelody.com>
maintainer:	    massimo.zaniboni@docmelody.com
executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.7.*
                  , old-locale ==1.0.*
                  , binary ==0.7.*
                  , time ==1.5.*
                  , containers ==0.5.*
                  , filepath ==1.4.*
                  , blaze-html ==0.8.*
  ghc-options: -threaded 
  default-language: Haskell2010
